--- a/src/styles/editorial.scss
+++ b/src/styles/editorial.scss
@@ -1,10 +1,12 @@
 .header {
+    z-index: 0;
     position: relative;
     width: 100%;
     height: 750px;
     margin-top: 144px;
 
     .header__img {
+        z-index: 0;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -12,6 +14,7 @@
     }
 
     .header__container {
+        z-index: 0;
         .header__bg {
             position: absolute;
             width: 100%;
@@ -67,5 +70,19 @@
                 }
             }
         }
+    }
+}
+
+.cards {
+    margin-inline: auto;
+    margin-top: 60px;
+
+    max-width: 85%;
+    height: 100vh;
+    background-color: red;
+
+    .cards__container {
+        width: max-content;
+        padding-inline: 20px;
     }
 }
